Update dependencies and clean up code
- Bump Vite version from 6.3.3 to 6.3.5 in client package.json.
- Remove unnecessary blank line in HttpServer.scala.
- Refactor user registration code in PersonService.scala for improved readability.
- Update laminar version from 17.1.0 to 17.1.1 in Dependencies.scala.
- Clean up comments and remove trailing whitespace in plugins.sbt.